fix footer icons aligning

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -13,9 +13,13 @@
 }
 
 .footer-icon__link {
-    border-radius: 80%;
+    border-radius: 100%;
     background: rgba(128, 128, 128, 0.1); 
-    padding: 10px 13px ;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
     margin-right: 6px;
 }
 
